# pyserial

./: .gitignore  .gitmodules  CMakeLists.txt  HACKING.md  SConscript  SConstruct  build_metadata.py  hook_settings.py  list_ports_util.py  makeegg.py  mb_version  pyserial.pth.in  setup.py
debian/: changelog  control  copyright  files  rules
debian/source/: options
documentation/: CMakeLists.txt  conf.py
examples/: enhancedserial.py  port_publisher.py  rfc2217_server.py  scan.py  scan_vidpid.py  scanlinux.py  scanwin32.py  tcp_serial_redirect.py  wxSerialConfigDialog.py  wxTerminal.py
pyparallel/: setup.py
pyparallel/parallel/: __init__.py  parallelutil.py
pyserial/: setup.py
pyserial/test/: test_advanced.py  test_high_load.py  test_readline.py
rpm/: mb_pyserial.spec  pyserial.spec
serial/: __init__.py  rfc2217.py  serialposix.py  serialutil.py
serial/tools/: get_ports_vid_pid_osx_posix.py  list_ports.py  list_ports_osx.py  list_ports_posix.py  list_ports_vid_pid_osx_posix.py  list_ports_windows.py  miniterm.py
test/: CMakeLists.txt  run_all_tests.py  test.py  test_advanced.py  test_get_ports_vid_pid_osx_posix.py  test_high_load.py  test_iolib.py  test_list_ports_osx.py  test_list_ports_vid_pid_osx_posix.py  test_list_ports_windows.py  test_lockage.py  test_readline.py  test_url.py
